# openhantek

./: readme.md
firmware/: 60-hantek.rules  CMakeLists.txt  compile.sh  extractfw.c
openhantek/res/: firmwares.qrc
openhantek/src/hantekdso/: hantekdsocontrol.cpp
openhantek/src/hantekdso/models/: modelDSO6022.cpp  modelDSO6022.h
openhantek/src/usb/: finddevices.cpp
